2001-03-02  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: add loopback interface if it doesn't exist
	  (ensure_loopback). Add "localhost" and "localhost.localdomain"
	  entries to loopback statichost entry.
	
2001-03-01  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in: Implemented basic debug functions.
	* Makefile.am: Included debug.pl.in in build and install.

2001-03-01  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_run): run command with sh -c.
	* network.pl.in (xst_network_interface_active): make interface discovery
	  platform indpenedent: old method couldn't detect if ifconfig failed.
	
2001-02-28  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in (read_fstab, write_fstab): Don't touch UUID= either.

2001-02-28  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_open_write_from_names): old criterion was preventing
	  file creation. Create file if it doesn't exist, under any condition.
	
2001-02-28  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in (read_fstab, write_fstab): Don't touch LABEL= lines
	  for now.

2001-02-27  Chema Celorio  <chema@celorio.com>

	* boot.pl.in (xst_boot_conf_set): fix a small typo

2001-02-27  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in (xml_parse_network): support winsuse boolean.
	* network.pl.in (xst_network_get_replace_table, parse_table): winsuse.
	* parse.pl.in (xst_parse_ini_bool): get a boolean from an ini file.
	* replace.pl.in (xst_replace_ini_bool): save a boolean...
	* xml.pl.in (xml_get_pcdata): return "" if tag doesn't have contents.
	
2001-02-26  Chema Celorio  <chema@celorio.com>

	* Makefile.am (perl_libs): remove be.pl

2001-02-27  Tambet Ingo  <tambet@ximian.com>

	* boot-conf.in (set_immediate): New function, we didn't actually run lilo before.

2001-02-26  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in (xml_parse_dialing): set the file item if none came from the XML.